fix navigation z-index

--- a/src/js/components/Life/LifeNavigation.less
+++ b/src/js/components/Life/LifeNavigation.less
@@ -104,7 +104,7 @@
   left: 0;
   right: 0;
   top: @header-height;
-  z-index: @nav-z + 2;
+  z-index: @nav-z-header;
   padding: 0.2em;
   background: #FFFFFF;
   box-shadow: rgba(0, 0, 0, 0.15) 1px 0px 5px, rgba(0, 0, 0, 0.2) 1px 0px 5px;
